# 3dengine_cpp_trackmodel

./: CMakeLists.txt  README.md
.github/workflows/: tests.yaml
apps/engine3d/: CMakeLists.txt  main.cc
libs/engine3d/converter/: CMakeLists.txt  converter.cc  converter.h
libs/engine3d/core/: CMakeLists.txt  image_processing.cc  image_processing.h
libs/engine3d/curve_calculator/: CMakeLists.txt  arc_algorithm.cc  arc_algorithm.h  generator.cc  parameter.h
libs/engine3d/engine/: CMakeLists.txt  camera_model.cc  camera_model.h  clipping_space.cc  clipping_space.h  color.cc  color.h  engine.cc  engine.h  fps_counter.cc  homogenous_transformation_matrix.cc  homogenous_transformation_matrix.h  parameter.h  render_system.cc  render_system.h  shape.cc  shape.h  triangle.h  vectors.cc  vectors.h
libs/engine3d/image_filter/: CMakeLists.txt  camera_processor.cc  camera_processor.h
libs/engine3d/straight_calculator/: CMakeLists.txt  generator.cc  line_algorithm.cc  line_algorithm.h  parameter.h  temp.cc
libs/engine3d/trackmodel/: CMakeLists.txt  trackmodel.cc  trackmodel.h
libs/engine3d/ui/: CMakeLists.txt  model.h  ui.cc  ui.h
libs/engine3d/ui/qml/: MainWindow.qml
libs/engine3d/ui/qml/items/: AdvancedSlider.qml  AdvancedSwitch.qml
scripts/: install_dependencies_macos.sh
unit_tests/: CMakeLists.txt
